manifests/fluentd-6.5.4.tgz-manifest.yaml
---
# Source: fluentd/templates/aggregator-networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: my-release-fluentd-aggregator
  namespace: "default"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: fluentd
    app.kubernetes.io/version: 1.17.0
    helm.sh/chart: fluentd-6.5.4
    app.kubernetes.io/component: aggregator
spec:
  policyTypes:
    - Ingress
    - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/name: fluentd
      app.kubernetes.io/component: aggregator
  egress:
    - {}
  ingress:
    # Allow inbound connections
    - ports:
        - port: 9880
        - port: 24224
---
# Source: fluentd/templates/forwarder-networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: my-release-fluentd-forwarder
  namespace: "default"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: fluentd
    app.kubernetes.io/version: 1.17.0
    helm.sh/chart: fluentd-6.5.4
    app.kubernetes.io/component: forwarder
spec:
  policyTypes:
    - Ingress
    - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/name: fluentd
      app.kubernetes.io/component: forwarder
  egress:
    - {}
  ingress:
    # Allow inbound connections
    - ports:
        - port: 9880
---
# Source: fluentd/templates/aggregator-svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-fluentd-headless
  namespace: "default"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: fluentd
    app.kubernetes.io/version: 1.17.0
    helm.sh/chart: fluentd-6.5.4
    app.kubernetes.io/component: aggregator
    app: aggregator
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: http
      
      port: 9880
      protocol: TCP
      targetPort: http
    - name: tcp
      
      port: 24224
      protocol: TCP
      targetPort: tcp
  selector:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/name: fluentd
    app.kubernetes.io/component: aggregator
---
# Source: fluentd/templates/aggregator-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-fluentd-aggregator
  namespace: "default"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: fluentd
    app.kubernetes.io/version: 1.17.0
    helm.sh/chart: fluentd-6.5.4
    app.kubernetes.io/component: aggregator
    app: aggregator
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: http
      
      port: 9880
      protocol: TCP
      targetPort: http
    - name: tcp
      
      port: 24224
      protocol: TCP
      targetPort: tcp
  selector:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/name: fluentd
    app.kubernetes.io/component: aggregator
---
# Source: fluentd/templates/forwarder-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-fluentd-forwarder
  namespace: "default"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: fluentd
    app.kubernetes.io/version: 1.17.0
    helm.sh/chart: fluentd-6.5.4
    app.kubernetes.io/component: forwarder
    app: forwarder
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: http
      
      port: 9880
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/name: fluentd
    app.kubernetes.io/component: forwarder
---
# Source: fluentd/templates/forwarder-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: my-release-fluentd
  namespace: "default"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: fluentd
    app.kubernetes.io/version: 1.17.0
    helm.sh/chart: fluentd-6.5.4
    app.kubernetes.io/component: forwarder
    ## Istio Labels: https://istio.io/docs/ops/deployment/requirements/
    app: forwarder
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/name: fluentd
      app.kubernetes.io/component: forwarder
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: fluentd
        app.kubernetes.io/version: 1.17.0
        helm.sh/chart: fluentd-6.5.4
        app.kubernetes.io/component: forwarder
        app: forwarder
      annotations:
        checksum/config: 222f0941ba98bb948da45b392d1d8b702b8da8de44c1b82dd8b76121de096536
    spec:
      
      automountServiceAccountToken: true
      serviceAccountName: my-release-fluentd-forwarder
      priorityClassName: ""
      affinity:
        podAffinity:
          
        podAntiAffinity:
          
        nodeAffinity:
          
      securityContext:
        fsGroup: 0
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      terminationGracePeriodSeconds: 30
      hostNetwork: false
      containers:
        - name: fluentd
          image: docker.io/bitnami/fluentd:1.17.0-debian-12-r4
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 0
            runAsUser: 0
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          resources:
            limits:
              cpu: 150m
              ephemeral-storage: 1024Mi
              memory: 192Mi
            requests:
              cpu: 100m
              ephemeral-storage: 50Mi
              memory: 128Mi
          ports:
            - containerPort: 9880
              name: http
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          readinessProbe:
            httpGet:
              path: /fluentd.healthcheck?json=%7B%22ping%22%3A+%22pong%22%7D
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          volumeMounts:
            - name: fluentd-config
              mountPath: /opt/bitnami/fluentd/conf
            - name: buffer
              mountPath: /opt/bitnami/fluentd/logs/buffers
            - name: varlog
              mountPath: /var/log
            - name: varlibdockercontainers
              mountPath: /var/lib/docker/containers
              readOnly: true
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
      volumes:
        - name: empty-dir
          emptyDir: {}
        - name: fluentd-config
          configMap:
            name: my-release-fluentd-forwarder-cm
        - name: buffer
          emptyDir: {}
        - name: varlog
          hostPath:
            path: /var/log
        - name: varlibdockercontainers
          hostPath:
            path: /var/lib/docker/containers
---
# Source: fluentd/templates/aggregator-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: my-release-fluentd
  namespace: "default"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: fluentd
    app.kubernetes.io/version: 1.17.0
    helm.sh/chart: fluentd-6.5.4
    app.kubernetes.io/component: aggregator
    ## Istio Labels: https://istio.io/docs/ops/deployment/requirements/
    app: aggregator
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/name: fluentd
      app.kubernetes.io/component: aggregator
  serviceName: my-release-fluentd-headless
  podManagementPolicy: 
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: fluentd
        app.kubernetes.io/version: 1.17.0
        helm.sh/chart: fluentd-6.5.4
        app.kubernetes.io/component: aggregator
        app: aggregator
      annotations:
        checksum/config: ebe780dfa866879e246005a7b40215d6db234284e73ccfed3de4f4f77ad15613
    spec:
      
      automountServiceAccountToken: false
      serviceAccountName: my-release-fluentd-aggregator
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: my-release
                    app.kubernetes.io/name: fluentd
                    app.kubernetes.io/component: aggregator
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      terminationGracePeriodSeconds: 30
      containers:
        - name: fluentd
          image: docker.io/bitnami/fluentd:1.17.0-debian-12-r4
          imagePullPolicy: "IfNotPresent"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          
          resources:
            limits:
              cpu: 150m
              ephemeral-storage: 1024Mi
              memory: 192Mi
            requests:
              cpu: 100m
              ephemeral-storage: 50Mi
              memory: 128Mi
          ports:
            - name: tcp
              containerPort: 24224
              protocol: TCP
            - containerPort: 9880
              name: http
              protocol: TCP
          startupProbe:
            httpGet:
              path: /fluentd.healthcheck?json=%7B%22ping%22%3A+%22pong%22%7D
              port: http
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          readinessProbe:
            httpGet:
              path: /fluentd.healthcheck?json=%7B%22ping%22%3A+%22pong%22%7D
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          volumeMounts:
            - name: fluentd-config
              mountPath: /opt/bitnami/fluentd/conf
            - name: buffer
              mountPath: /opt/bitnami/fluentd/logs/buffers
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
      volumes:
        - name: empty-dir
          emptyDir: {}
        - name: fluentd-config
          configMap:
            name: my-release-fluentd-aggregator-cm
        - name: buffer
          emptyDir: {}
